--- a/hello-wasm/site/package.json
+++ b/hello-wasm/site/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@araxsiyual/hello-wasm": "^0.1.0"
+    "@araxsiyual/hello-wasm": "file:../lib/pkg"
   },
   "devDependencies": {
     "webpack": "^4.41.2",
